--- a/dev/styles/_footer-section.scss
+++ b/dev/styles/_footer-section.scss
@@ -1,3 +1,25 @@
+.navLower {
+	border-top: 1px solid $secondaryColor;
+	border-bottom: 1px solid $secondaryColor;
+}
+
+.navLower ul {
+	padding: 20px 0;
+}
+
+@media (max-width: 768px) {
+	.navLower ul {
+		width: 95%;
+		margin: 0 auto;
+	}
+}
+
+@media (max-width: 425px) {
+	.navLower {
+		display: none;
+	}
+}
+
 .footerContainer {
 	display: flex;
 	justify-content: space-between;
