--- a/dev/styles/_gallery-section.scss
+++ b/dev/styles/_gallery-section.scss
@@ -26,10 +26,13 @@
 
 figure {
 	margin-top: 30px;
+	position: relative;
 	&:first-child {
 		margin-top: 0;
 	}
-	position: relative;
+	&:hover figcaption {
+		display: block;
+	}
 }
 
 figcaption {
@@ -41,17 +44,17 @@ figcaption {
 	background-color: rgba(206,32,41,0.8);
 }
 
-figure:hover figcaption {
-	display: block;
-}
-
 .overlay {
-	position: absolute;
-	width: 100%;
+	position: relative;
+	width: 70%;
+	margin: 0 auto;
 	top: 50%;
 	transform: translateY(-50%);
 	color: white;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	h3 {
 		margin: 0;
 	}
@@ -59,23 +62,23 @@ figure:hover figcaption {
 		text-transform: lowercase;
 		font-style: italic;
 		font-family: 'Noto Serif', serif;
-		margin: 0;
+		margin: 5px 0;
 		font-size: 0.8rem;
 		position: relative;
 		&::before, &::after {
 			content: '';
 			position: absolute;
-			width: 10%;
-			height: 1px;
+			width: 40%;
+			height: 2px;
 			top: 50%;
 			transform: translateY(-50%);
 			background-color: white;
 		}
 		&::before {
-			left: calc(50% - 100px);
+			left: -55px;
 		}
 		&::after {
-			right: calc(50% - 100px);
+			right: -55px;
 		}
 	}
 	a {
@@ -83,54 +86,10 @@ figure:hover figcaption {
 		text-decoration: none;
 		color: white;
 		&:hover {
-			border-bottom: 1px solid white;
+			font-weight: 700;
 		}
 	}
 }
-
-
-
-// .overlayStyling {
-// 	display: grid;
-// 	grid-template-columns: 1fr auto 1fr;
-// 	grid-column-gap: 5px;
-// 	width: 60%;
-// 	margin: 0 auto;
-// 	p {
-// 		// font-size: 0.8rem;
-// 		grid-column: 2/3;
-// 	}
-// }
-
-// .overlayBefore span::before {
-// 	content: '';
-// 	border-bottom: 1px solid white;
-// 	right: 0;
-// 	left: 0;
-// 	top: 50%;
-// 	transform: translateY(-50%);
-// 	position: absolute;
-// }
-
-// .overlayBefore {
-// 	grid-column: 1/2;
-// 	position: relative;
-// }
-
-// .overlayAfter span::after {
-// 	content: '';
-// 	border-bottom: 1px solid white;
-// 	right: 0;
-// 	left: 0;
-// 	top: 50%;
-// 	transform: translateY(-50%);
-// 	position: absolute;
-// }
-
-// .overlayAfter {
-// 	grid-column: 3/4;
-// 	position: relative;
-// }
 
 @media (max-width: 768px) {
 	.imageGallery {
