--- a/dev/styles/_header-section.scss
+++ b/dev/styles/_header-section.scss
@@ -1,58 +1,45 @@
 .title {
 	text-align: center;
 	margin: 40px 0;
-}
-
-.navigation ul {
-	display: flex;
-	padding: 0;
-	margin: 0 auto;
-	padding: 15px 0;
-	justify-content: center;
-	li {
-		padding: 0 10px;
-	}
-}
-
-.navUpper {
-	border-top: 1px solid $secondaryColor;
-	border-bottom: 1px solid $secondaryColor;
-}
-
-.navigation a {
-	padding: 5px;
-	color: $primaryColor;
-	&:hover {
-		font-weight: 800;
-	}
-}
-
-header img {
-	margin-top: 30px;
-}
-
-@media (max-width: 768px) {
-	.navigation ul {
-		justify-content: space-between;
-		li {
-			padding: 0;
-		}
-		a {
-			padding: 0;
-		}
-	}
-}
-
-@media (max-width: 425px) {
-	.title {
+	@media (max-width: 425px) {
 		margin-top: 15px;
 		padding-bottom: 15px;
 		border-bottom: 1px solid $secondaryColor;
 	}
-	header img {
-		margin-top: 0;
+}
+
+.navigation {
+	border-top: 1px solid $secondaryColor;
+	border-bottom: 1px solid $secondaryColor;
+	ul {
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		padding: 15px 0;
+		li {
+			padding: 0 10px;
+			a {
+				padding: 5px;
+				color: $primaryColor;
+				&:hover {
+					font-weight: 800;
+				}
+			}
+		}
+		@media (max-width: 768px) {
+			justify-content: space-between;
+			li {
+				padding: 0;
+				a {
+					padding: 0;
+				}
+			}
+		}
 	}
-	.navUpper {
+}
+
+.navUpper {
+	@media (max-width: 425px) {
 		position: fixed;
 		top: 0;
 		bottom: 77px;
@@ -80,8 +67,81 @@ header img {
 				}			
 			}
 		}
-	}
-	.navUpper.hidden {
-		left: 1000px;
+		&.hidden {
+			left: 1000px;
+		}
 	}
 }
+
+header img {
+	margin-top: 30px;
+}
+
+// .navigation {
+// 	border-top: 1px solid $secondaryColor;
+// 	border-bottom: 1px solid $secondaryColor;
+// }
+
+// .navigation a {
+// 	padding: 5px;
+// 	color: $primaryColor;
+// 	&:hover {
+// 		font-weight: 800;
+// 	}
+// }
+
+
+// @media (max-width: 768px) {
+// 	.navigation ul {
+// 		justify-content: space-between;
+// 		li {
+// 			padding: 0;
+// 		}
+// 		a {
+// 			padding: 0;
+// 		}
+// 	}
+// }
+
+// @media (max-width: 425px) {
+	// .title {
+	// 	margin-top: 15px;
+	// 	padding-bottom: 15px;
+	// 	border-bottom: 1px solid $secondaryColor;
+	// }
+	// header img {
+	// 	margin-top: 0;
+	// }
+	// .navUpper {
+	// 	position: fixed;
+	// 	top: 0;
+	// 	bottom: 77px;
+	// 	left: 0;
+	// 	right: 0;
+	// 	z-index: 200;
+	// 	background: lightgrey;
+	// 	border: none;
+	// 	transition: all 0.3s ease-in;
+	// 	ul {
+	// 		display: flex;
+	// 		flex-direction: column;
+	// 		align-items: center;
+	// 		position: absolute;
+	// 		top: 50%;
+	// 		width: 100%;
+	// 		transform: translateY(-50%);
+	// 		li {
+	// 			margin-bottom: 20px;
+	// 			&:last-child {
+	// 				margin-bottom: 0;
+	// 			}
+	// 			a {
+	// 				font-size: 2rem;
+	// 			}			
+	// 		}
+	// 	}
+	// }
+	// .navUpper.hidden {
+	// 	left: 1000px;
+	// }
+// }
