--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -281,50 +281,42 @@ nav {
 .title {
   text-align: center;
   margin: 40px 0; }
+  @media (max-width: 425px) {
+    .title {
+      margin-top: 15px;
+      padding-bottom: 15px;
+      border-bottom: 1px solid #808080; } }
 
-.navigation ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  margin: 0 auto;
-  padding: 15px 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .navigation ul li {
-    padding: 0 10px; }
-
-.navUpper {
+.navigation {
   border-top: 1px solid #808080;
   border-bottom: 1px solid #808080; }
-
-.navigation a {
-  padding: 5px;
-  color: #000000; }
-  .navigation a:hover {
-    font-weight: 800; }
-
-header img {
-  margin-top: 30px; }
-
-@media (max-width: 768px) {
   .navigation ul {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 auto;
+    padding: 15px 0; }
     .navigation ul li {
-      padding: 0; }
-    .navigation ul a {
-      padding: 0; } }
+      padding: 0 10px; }
+      .navigation ul li a {
+        padding: 5px;
+        color: #000000; }
+        .navigation ul li a:hover {
+          font-weight: 800; }
+    @media (max-width: 768px) {
+      .navigation ul {
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between; }
+        .navigation ul li {
+          padding: 0; }
+          .navigation ul li a {
+            padding: 0; } }
 
 @media (max-width: 425px) {
-  .title {
-    margin-top: 15px;
-    padding-bottom: 15px;
-    border-bottom: 1px solid #808080; }
-  header img {
-    margin-top: 0; }
   .navUpper {
     position: fixed;
     top: 0;
@@ -358,29 +350,32 @@ header img {
           margin-bottom: 0; }
         .navUpper ul li a {
           font-size: 2rem; }
-  .navUpper.hidden {
-    left: 1000px; } }
+    .navUpper.hidden {
+      left: 1000px; } }
+
+header img {
+  margin-top: 30px; }
 
 .heading {
   margin-top: 30px;
   text-align: center;
   position: relative; }
-
-.heading::before, .heading::after {
-  content: '';
-  position: absolute;
-  width: calc(50% - 80px);
-  height: 1px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  background-color: #808080; }
-
-.heading::before {
-  left: 0; }
-
-.heading::after {
-  right: 0; }
+  .heading.heading::before, .heading.heading::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    width: calc(50% - 80px);
+    height: 1px;
+    background-color: #808080; }
+  .heading.heading::before {
+    left: 0; }
+  .heading.heading::after {
+    right: 0; }
+  @media (max-width: 425px) {
+    .heading {
+      margin-bottom: 0; } }
 
 .columns {
   -webkit-column-count: 3;
@@ -392,24 +387,20 @@ header img {
     line-height: 1.8;
     text-align: justify;
     font-weight: 500; }
-
-@media (max-width: 768px) {
-  .columns {
-    -webkit-column-count: 2;
-            column-count: 2;
-    -webkit-column-gap: 15px;
-            column-gap: 15px; } }
-
-@media (max-width: 425px) {
-  .about h2 {
-    margin-bottom: 0; }
-  .columns {
-    -webkit-column-count: 1;
-            column-count: 1; }
-    .columns p:first-child {
-      margin-top: 15px; }
-    .columns p:last-child {
-      margin-bottom: 0; } }
+  @media (max-width: 768px) {
+    .columns {
+      -webkit-column-count: 2;
+              column-count: 2;
+      -webkit-column-gap: 15px;
+              column-gap: 15px; } }
+  @media (max-width: 425px) {
+    .columns {
+      -webkit-column-count: 1;
+              column-count: 1; }
+      .columns p:first-child {
+        margin-top: 15px; }
+      .columns p:last-child {
+        margin-bottom: 0; } }
 
 .gallery {
   margin-top: 30px; }
@@ -421,46 +412,47 @@ header img {
           column-width: 33.33%;
   -webkit-column-gap: 30px;
           column-gap: 30px;
-  margin: 30px 0; }
-
-.toggleOverflow {
-  display: none;
-  margin: 0 auto 30px auto;
-  background: none;
-  border: 1px solid #000000;
-  padding: 10px 15px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  text-transform: uppercase; }
-  .toggleOverflow:hover {
-    color: #a21920;
-    border: 1px solid #a21920;
-    background-color: #f6c4c7; }
-
-figure {
-  margin-top: 30px;
-  position: relative; }
-  figure:first-child {
-    margin-top: 0; }
-  figure:hover figcaption {
-    display: block; }
-
-figcaption {
-  display: none;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(206, 32, 41, 0.8); }
+  margin-bottom: 60px; }
+  .imageGallery figure {
+    position: relative;
+    margin-top: 30px; }
+    .imageGallery figure:first-child {
+      margin-top: 0; }
+    .imageGallery figure figcaption {
+      display: none;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: rgba(206, 32, 41, 0.8); }
+    .imageGallery figure:hover figcaption {
+      display: block; }
+  @media (max-width: 768px) {
+    .imageGallery {
+      -webkit-column-count: 2;
+              column-count: 2;
+      -webkit-column-gap: 15px;
+              column-gap: 15px;
+      margin-bottom: 0; }
+      .imageGallery figure {
+        margin-top: 15px; }
+        .imageGallery figure:first-child {
+          margin-top: 0; }
+      .imageGallery figure:nth-child(6) ~ figure {
+        display: none; } }
+  @media (max-width: 425px) {
+    .imageGallery {
+      -webkit-column-count: 1;
+              column-count: 1;
+      margin-top: 0; }
+      .imageGallery figure:first-child {
+        margin-top: 15px; } }
 
 .overlay {
   position: relative;
-  width: 70%;
-  margin: 0 auto;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -468,12 +460,12 @@ figcaption {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  width: 70%;
+  margin: 0 auto;
+  color: white; }
   .overlay h3 {
     margin: 0; }
   .overlay p {
@@ -502,43 +494,40 @@ figcaption {
     color: white; }
     .overlay a:hover {
       font-weight: 700; }
+  @media (max-width: 425px) {
+    .overlay p {
+      margin: 15px 0; }
+    .overlay a, .overlay p {
+      font-size: 1rem; } }
 
-@media (max-width: 768px) {
-  .imageGallery {
-    -webkit-column-count: 2;
-            column-count: 2;
-    -webkit-column-gap: 15px;
-            column-gap: 15px; }
-    .imageGallery figure {
-      margin-top: 15px; }
-      .imageGallery figure:first-child {
-        margin-top: 0; }
-  figure:nth-child(6) ~ figure {
-    display: none; }
-  .toggleOverflow {
-    display: block; } }
-
-@media (max-width: 425px) {
-  .gallery h2 {
-    margin: 0; }
-  .overlay p {
-    margin: 15px 0; }
-  .overlay a, .overlay p {
-    font-size: 1rem; }
-  .imageGallery {
-    -webkit-column-count: 1;
-            column-count: 1;
-    margin-top: 0; }
-    .imageGallery figure:first-child {
-      margin-top: 15px; } }
+.toggleOverflow {
+  display: none;
+  margin: 30px auto;
+  background: none;
+  border: 1px solid #000000;
+  padding: 10px 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-transform: uppercase; }
+  .toggleOverflow:hover {
+    color: #a21920;
+    border: 1px solid #a21920;
+    background-color: #f6c4c7; }
+  @media (max-width: 768px) {
+    .toggleOverflow {
+      display: block; } }
 
 .contact {
   text-align: center;
   border-top: 1px solid #808080;
   padding: 50px 0; }
-
-.contact h4 {
-  margin-top: 0; }
+  .contact h4 {
+    margin-top: 0; }
+  .contact p {
+    font-size: 0.7rem; }
+  @media (max-width: 425px) {
+    .contact {
+      border-bottom: 1px solid #808080; } }
 
 .contactForm {
   display: grid;
@@ -570,41 +559,43 @@ figcaption {
     border: 1px solid #000000;
     text-align: center;
     padding: 10px; }
-
-.contact p {
-  font-size: 0.7rem; }
+  @media (max-width: 768px) {
+    .contactForm {
+      width: 75%; } }
+  @media (max-width: 425px) {
+    .contactForm {
+      width: 100%;
+      grid-row-gap: 10px; }
+      .contactForm input[type=email] {
+        grid-column: 1/3;
+        grid-row: 1/2; }
+      .contactForm input[type=submit] {
+        grid-column: 1/3;
+        grid-row: 2/3; } }
 
 @media (max-width: 768px) {
-  .contactForm {
-    width: 75%; }
   .mobileWrapper {
     width: 95%;
     margin: 0 auto; } }
 
 @media (max-width: 425px) {
-  .contact {
+  footer {
+    background: lightgrey;
+    margin-bottom: 76px;
     border-bottom: 1px solid #808080; }
-  .contactForm {
-    width: 100%;
-    grid-row-gap: 10px; }
-    .contactForm input[type=email] {
-      grid-column: 1/3;
-      grid-row: 1/2; }
-    .contactForm input[type=submit] {
-      grid-column: 1/3;
-      grid-row: 2/3; } }
-
-.navLower {
-  border-top: 1px solid #808080;
-  border-bottom: 1px solid #808080; }
+    footer .footerContainer {
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      footer .footerContainer .socialLinks {
+        display: none; } }
 
 .navLower ul {
   padding: 20px 0; }
-
-@media (max-width: 768px) {
-  .navLower ul {
-    width: 95%;
-    margin: 0 auto; } }
+  @media (max-width: 768px) {
+    .navLower ul {
+      width: 95%;
+      margin: 0 auto; } }
 
 @media (max-width: 425px) {
   .navLower {
@@ -618,33 +609,19 @@ figcaption {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 10px 0; }
-
-.footerContainer p {
-  font-weight: bold;
-  color: #000000; }
-  .footerContainer p a {
-    font-weight: 700;
+  .footerContainer p {
+    font-weight: bold;
     color: #000000; }
-
-.footerContainer .socialLinks {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-  .footerContainer .socialLinks a {
-    color: #000000; }
-    .footerContainer .socialLinks a:hover {
-      color: #ce2029;
-      -webkit-transition: color 0.3s;
-      transition: color 0.3s; }
-
-@media (max-width: 425px) {
-  footer {
-    background: lightgrey;
-    margin-bottom: 76px;
-    border-bottom: 1px solid #808080; }
-    footer .footerContainer {
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; }
-      footer .footerContainer .socialLinks {
-        display: none; } }
+    .footerContainer p a {
+      font-weight: 700;
+      color: #000000; }
+  .footerContainer .socialLinks {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .footerContainer .socialLinks a {
+      color: #000000; }
+      .footerContainer .socialLinks a:hover {
+        color: #ce2029;
+        -webkit-transition: color 0.3s;
+        transition: color 0.3s; }
