--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,6 +1,6 @@
 @import 'setup';
 @import 'fonts-and-colors';
-@import 'navigation-upper-section';
+@import 'navigation-section';
 @import 'header-section';
 @import 'about-section';
 @import 'gallery-section';
