--- a/dev/styles/_fonts-and-colors.scss
+++ b/dev/styles/_fonts-and-colors.scss
@@ -11,29 +11,29 @@ $accentColor: #ce2029;
 // body
 // font-family: 'Noto Serif', serif;
 
-h1, h2, h3, h4, a, ul, li, p, button {
+h1, h2, h3, h4, ul, li, a, p, button {
 	font-family: 'Raleway', sans-serif;
+}
+
+h1, h2, h3, h4, ul, li, a  {
+	text-transform: uppercase;
 }
 
 h1 {
 	font-size: 2rem;
 	font-weight: 700;
-	text-transform: uppercase;
 }
 
 h2, h3 {
 	font-size: 1.6rem;
-	text-transform: uppercase;
 }
 
 h4 {
 	font-size: 1.1rem;
-	text-transform: uppercase;
 }
 
 a, ul, li {
 	font-size: 1rem;
-	text-transform: uppercase;
 	list-style: none;
 	text-decoration: none;
 }
