--- a/dev/styles/_footer-section.scss
+++ b/dev/styles/_footer-section.scss
@@ -29,13 +29,9 @@ footer {
 	display: flex;
 	justify-content: space-between;
 	padding: 10px 0;
-	p {
-		font-weight: bold;
+	p, a {
+		font-weight: 700;
 		color: $primaryColor;
-		a {
-			font-weight: 700;
-			color: $primaryColor;
-		}
 	}
 	.socialLinks {
 		display: flex;
@@ -48,53 +44,3 @@ footer {
 		}
 	}
 }
-
-
-
-// .footerContainer .socialLinks {
-// 	display: flex;
-// 	a {
-// 		color: $primaryColor;
-// 		&:hover {
-// 			color: $accentColor;
-// 			transition: color 0.3s;
-// 		}
-// 	}
-// // }
-
-// @media (max-width: 425px) {
-// 	footer {
-// 		background: lightgrey;
-// 		margin-bottom: 76px;
-// 		border-bottom: 1px solid $secondaryColor;
-// 		.footerContainer {
-// 			justify-content: center;
-// 			.socialLinks {
-// 				display: none;
-// 			}
-// 		}
-// 	}
-// }
-
-// @media (max-width: 768px) {
-// 	.navLower ul {
-// 		width: 95%;
-// 		margin: 0 auto;
-// 	}
-// }
-
-// @media (max-width: 425px) {
-// 	.navLower {
-// 		display: none;
-// 	}
-// }
-
-
-// .footerContainer p {
-// 	font-weight: bold;
-// 	color: $primaryColor;
-// 	a {
-// 		font-weight: 700;
-// 		color: $primaryColor;
-// 	}
-// }
