--- a/dev/styles/_header-section.scss
+++ b/dev/styles/_header-section.scss
@@ -28,11 +28,8 @@
 		}
 		@media (max-width: 768px) {
 			justify-content: space-between;
-			li {
+			li, a {
 				padding: 0;
-				a {
-					padding: 0;
-				}
 			}
 		}
 	}
@@ -76,72 +73,3 @@
 header img {
 	margin-top: 30px;
 }
-
-// .navigation {
-// 	border-top: 1px solid $secondaryColor;
-// 	border-bottom: 1px solid $secondaryColor;
-// }
-
-// .navigation a {
-// 	padding: 5px;
-// 	color: $primaryColor;
-// 	&:hover {
-// 		font-weight: 800;
-// 	}
-// }
-
-
-// @media (max-width: 768px) {
-// 	.navigation ul {
-// 		justify-content: space-between;
-// 		li {
-// 			padding: 0;
-// 		}
-// 		a {
-// 			padding: 0;
-// 		}
-// 	}
-// }
-
-// @media (max-width: 425px) {
-	// .title {
-	// 	margin-top: 15px;
-	// 	padding-bottom: 15px;
-	// 	border-bottom: 1px solid $secondaryColor;
-	// }
-	// header img {
-	// 	margin-top: 0;
-	// }
-	// .navUpper {
-	// 	position: fixed;
-	// 	top: 0;
-	// 	bottom: 77px;
-	// 	left: 0;
-	// 	right: 0;
-	// 	z-index: 200;
-	// 	background: lightgrey;
-	// 	border: none;
-	// 	transition: all 0.3s ease-in;
-	// 	ul {
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		align-items: center;
-	// 		position: absolute;
-	// 		top: 50%;
-	// 		width: 100%;
-	// 		transform: translateY(-50%);
-	// 		li {
-	// 			margin-bottom: 20px;
-	// 			&:last-child {
-	// 				margin-bottom: 0;
-	// 			}
-	// 			a {
-	// 				font-size: 2rem;
-	// 			}			
-	// 		}
-	// 	}
-	// }
-	// .navUpper.hidden {
-	// 	left: 1000px;
-	// }
-// }
