--- a/dev/styles/_navigation-section.scss
+++ b/dev/styles/_navigation-section.scss
@@ -14,7 +14,7 @@ nav {
 	}
 }
 
-.headerLinks {
+.linksContainer {
 	display: flex;
 	justify-content: space-between;
 	ul {
@@ -83,68 +83,3 @@ nav {
 		display: block;
 	}
 }
-
-
-// .socialLinks li {
-// 	margin-left: 10px;
-// }
-
-// @media (max-width: 425px) {
-// 	// nav {
-// 	// 	position: fixed;
-// 	// 	bottom: 0;
-// 	// 	width: 100%;
-// 	// 	background: white;
-// 	// 	z-index: 200;
-// 	// 	border-top: 1px solid $secondaryColor;
-// 	// 	padding: 10px 0;
-// 	// }
-// 	// nav i {
-// 	// 	font-size: 1.5rem;
-// 	// }
-// 	.socialLinks {
-// 		width: 50%;
-// 		text-align: right;
-// 		display: flex;
-// 		justify-content: space-between;
-// 		li {
-// 			margin: 0;
-// 		}
-// 	}
-// 	// .navLinks::after {
-// 	// 	display: none;
-// 	// }
-// 	// .navLinks li:first-child, .navLinks li:nth-child(2) {
-// 	// 	display: none;
-// 	// }
-// // 	.mobileMenu {
-// // 		display: block;
-// // 	}
-// }
-
-
-
-// .socialLinks a:hover {
-// 	color: $accentColor;
-// 	transition: color 0.3s;
-// }
-
-// .navLinks::after {
-// 	content: '|';
-// 	position: absolute;
-// 	left: 50%;
-// 	transform: translateX(-50%);
-// 	font-weight: 500;
-// }
-
-// .navLinks a {
-// 	padding: 5px 0;
-// 	&:hover {
-// 		font-weight: 800;
-// 	}
-// }
-
-// .navLinks li {
-// 	margin-right: 20px;
-// 	position: relative;
-// }
