--- a/dev/styles/_contact-section.scss
+++ b/dev/styles/_contact-section.scss
@@ -3,10 +3,10 @@
 	border-top: 1px solid $secondaryColor;
 	padding: 50px 0;
 	h4 {
-		margin-top: 0;
+		margin: 0 0 15px 0;
 	}
 	p {
-		font-size: 0.7rem;
+		font-size: 1.3rem;
 	}
 	@media (max-width: 425px) {
 		border-bottom: 1px solid $secondaryColor;
@@ -19,13 +19,16 @@
 	grid-template-rows: auto;
 	grid-gap: 5px;
 	justify-content: center;
-	width: 35%;
+	width: 37.5%;
 	margin: 0 auto;
 	input[type=email] {
 		grid-column: 1/2;
 		font-family: 'Noto Serif', serif;
 		font-style: italic;
 		color: $primaryColor;
+		&::placeholder {
+			font-size: 1.8rem;
+		}
 	}
 	input[type=submit] {
 		grid-column: 2/3;
@@ -42,7 +45,7 @@
 	input[type=email], input[type=submit] {
 		border: 1px solid $primaryColor;
 		text-align: center;
-		padding: 10px;
+		padding: 15px;
 	}
 	@media (max-width: 768px) {
 		width: 75%;
