--- a/dev/styles/_footer-section.scss
+++ b/dev/styles/_footer-section.scss
@@ -14,7 +14,7 @@ footer {
 
 .navLower {
 	ul {
-		padding: 20px 0;
+		padding: 30px 0;
 		@media (max-width: 768px) {
 			width: 95%;
 			margin: 0 auto;
@@ -32,9 +32,20 @@ footer {
 	p, a {
 		font-weight: 700;
 		color: $primaryColor;
+		transition: color 0.3s;
+	}
+	a:hover {
+		color: $accentColor;
+	}
+	p {
+		font-size: 1.8rem;
+		a {
+			font-size: 1.8rem;
+		}
 	}
 	.socialLinks {
 		display: flex;
+		padding: 0;
 		a {
 			color: $primaryColor;
 			&:hover {
