--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -131,12 +131,15 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+html {
+  font-size: 62.5%; }
+
 img {
   display: block;
   max-width: 100%; }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1152px;
   width: 95%;
   margin: 0 auto; }
 
@@ -176,22 +179,22 @@ h1, h2, h3, h4, ul, li, a {
   text-transform: uppercase; }
 
 h1 {
-  font-size: 2rem;
+  font-size: 3.2rem;
   font-weight: 700; }
 
 h2, h3 {
-  font-size: 1.6rem; }
+  font-size: 2.4rem; }
 
 h4 {
-  font-size: 1.1rem; }
+  font-size: 1.8rem; }
 
-a, ul, li {
-  font-size: 1rem;
+ul, li, a, p {
+  font-size: 1.6rem;
   list-style: none;
   text-decoration: none; }
 
-input {
-  font-size: 0.9rem; }
+input, button {
+  font-size: 1.4rem; }
 
 a, input, button {
   font-weight: 500; }
@@ -350,10 +353,11 @@ nav {
       left: 1000px; } }
 
 header img {
-  margin-top: 30px; }
+  margin-top: 30px;
+  margin-bottom: 60px; }
 
 .heading {
-  margin-top: 30px;
+  margin: 30px 0;
   text-align: center;
   position: relative; }
   .heading.heading::before, .heading.heading::after {
@@ -362,7 +366,7 @@ header img {
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
-    width: calc(50% - 80px);
+    width: calc(50% - 70px);
     height: 1px;
     background-color: #808080; }
   .heading.heading::before {
@@ -377,7 +381,8 @@ header img {
   -webkit-column-count: 3;
           column-count: 3;
   -webkit-column-gap: 30px;
-          column-gap: 30px; }
+          column-gap: 30px;
+  margin-bottom: 60px; }
   .columns p {
     margin: 0 0 10px 0;
     line-height: 1.8;
@@ -469,13 +474,13 @@ header img {
     font-style: italic;
     font-family: 'Noto Serif', serif;
     margin: 5px 0;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     position: relative; }
     .overlay p::before, .overlay p::after {
       content: '';
       position: absolute;
       width: 40%;
-      height: 2px;
+      height: 1px;
       top: 50%;
       -webkit-transform: translateY(-50%);
               transform: translateY(-50%);
@@ -485,7 +490,7 @@ header img {
     .overlay p::after {
       right: -55px; }
   .overlay a {
-    font-size: 0.7rem;
+    font-size: 1.2rem;
     text-decoration: none;
     color: white; }
     .overlay a:hover {
@@ -518,9 +523,9 @@ header img {
   border-top: 1px solid #808080;
   padding: 50px 0; }
   .contact h4 {
-    margin-top: 0; }
+    margin: 0 0 15px 0; }
   .contact p {
-    font-size: 0.7rem; }
+    font-size: 1.3rem; }
   @media (max-width: 425px) {
     .contact {
       border-bottom: 1px solid #808080; } }
@@ -533,13 +538,21 @@ header img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 35%;
+  width: 37.5%;
   margin: 0 auto; }
   .contactForm input[type=email] {
     grid-column: 1/2;
     font-family: 'Noto Serif', serif;
     font-style: italic;
     color: #000000; }
+    .contactForm input[type=email]::-webkit-input-placeholder {
+      font-size: 1.8rem; }
+    .contactForm input[type=email]:-ms-input-placeholder {
+      font-size: 1.8rem; }
+    .contactForm input[type=email]::-ms-input-placeholder {
+      font-size: 1.8rem; }
+    .contactForm input[type=email]::placeholder {
+      font-size: 1.8rem; }
   .contactForm input[type=submit] {
     grid-column: 2/3;
     font-family: 'Raleway', sans-serif;
@@ -554,7 +567,7 @@ header img {
   .contactForm input[type=email], .contactForm input[type=submit] {
     border: 1px solid #000000;
     text-align: center;
-    padding: 10px; }
+    padding: 15px; }
   @media (max-width: 768px) {
     .contactForm {
       width: 75%; } }
@@ -587,7 +600,7 @@ header img {
         display: none; } }
 
 .navLower ul {
-  padding: 20px 0; }
+  padding: 30px 0; }
   @media (max-width: 768px) {
     .navLower ul {
       width: 95%;
@@ -607,11 +620,20 @@ header img {
   padding: 10px 0; }
   .footerContainer p, .footerContainer a {
     font-weight: 700;
-    color: #000000; }
+    color: #000000;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s; }
+  .footerContainer a:hover {
+    color: #ce2029; }
+  .footerContainer p {
+    font-size: 1.8rem; }
+    .footerContainer p a {
+      font-size: 1.8rem; }
   .footerContainer .socialLinks {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    padding: 0; }
     .footerContainer .socialLinks a {
       color: #000000; }
       .footerContainer .socialLinks a:hover {
