More touchups, DRY code

--- a/dev/styles/_header-section.scss
+++ b/dev/styles/_header-section.scss
@@ -19,7 +19,6 @@
 		li {
 			padding: 0 10px;
 			a {
-				padding: 5px;
 				color: $primaryColor;
 				&:hover {
 					font-weight: 800;
@@ -60,7 +59,7 @@
 					margin-bottom: 0;
 				}
 				a {
-					font-size: 2rem;
+					font-size: 4rem;
 				}			
 			}
 		}
@@ -73,4 +72,7 @@
 header img {
 	margin-top: 30px;
 	margin-bottom: 60px;
+	@media (max-width: 425px) {
+		margin-bottom: 30px;
+	}
 }
